Fixed label alignment when small

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -338,8 +338,8 @@ video.qr-preview {
     cursor: pointer;
     overflow: hidden;
     user-select: none;
-    span {
-      margin-right: 16px;
+    label {
+      margin-left: 16px;
     }
   }
 
